@@ -105,12 +105,28 @@
 	<widget class="GtkMenu" id="calculator_state1_menu">
 
 	  <child>
+	    <widget class="GtkMenuItem" id="revert_to_saved_state1">
+	      <property name="visible">True</property>
+	      <property name="tooltip" translatable="yes">Reload the previously saved state.</property>
+	      <property name="label" translatable="yes">Revert to saved state</property>
+	      <property name="use_underline">True</property>
+	      <signal name="activate" handler="on_revert_to_saved_state1_activate"/>
+	    </widget>
+	  </child>
+
+	  <child>
 	    <widget class="GtkMenuItem" id="load_state_image1">
 	      <property name="visible">True</property>
 	      <property name="tooltip" translatable="yes">Load the calculator state from file.</property>
 	      <property name="label" translatable="yes">Load state image...</property>
 	      <property name="use_underline">True</property>
 	      <signal name="activate" handler="on_load_state_image1_activate"/>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkSeparatorMenuItem" id="séparateur1">
+	      <property name="visible">True</property>
 	    </widget>
 	  </child>
 
@@ -125,12 +141,12 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkMenuItem" id="revert_to_saved_state1">
+	    <widget class="GtkMenuItem" id="exit1">
 	      <property name="visible">True</property>
-	      <property name="tooltip" translatable="yes">Reload the previously saved state.</property>
-	      <property name="label" translatable="yes">Revert to saved state</property>
+	      <property name="tooltip" translatable="yes">Do a 'save state image' and exits.</property>
+	      <property name="label" translatable="yes">E_xit and save state</property>
 	      <property name="use_underline">True</property>
-	      <signal name="activate" handler="on_revert_to_saved_state1_activate"/>
+	      <signal name="activate" handler="on_exit_and_save_state1_activate" last_modification_time="Fri, 14 May 2004 15:30:18 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
@@ -366,7 +382,7 @@
 	      <accelerator key="H" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image46">
+		<widget class="GtkImage" id="image54">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-help</property>
 		  <property name="icon_size">1</property>
@@ -389,7 +405,7 @@
 	      <accelerator key="M" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image47">
+		<widget class="GtkImage" id="image55">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-index</property>
 		  <property name="icon_size">1</property>
@@ -480,7 +496,7 @@
 	      <signal name="activate" handler="on_bugreport1_activate" last_modification_time="Sun, 20 Feb 2005 17:58:57 GMT"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image48">
+		<widget class="GtkImage" id="image56">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-execute</property>
 		  <property name="icon_size">1</property>
@@ -529,16 +545,6 @@
       <property name="label" translatable="yes">Infos...</property>
       <property name="use_underline">True</property>
       <signal name="activate" handler="on_infos1_activate"/>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkMenuItem" id="exit1">
-      <property name="visible">True</property>
-      <property name="tooltip" translatable="yes">Do a 'save state image' and exits.</property>
-      <property name="label" translatable="yes">E_xit and save state</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="on_exit_and_save_state1_activate" last_modification_time="Fri, 14 May 2004 15:30:18 GMT"/>
     </widget>
   </child>
 
