@@ -19,12 +19,14 @@ gchar *s = N_("Save config...");
 gchar *s = N_("Load the configuration previously saved.");
 gchar *s = N_("Load config...");
 gchar *s = N_("Calculator state");
+gchar *s = N_("Reload the previously saved state.");
+gchar *s = N_("Revert to saved state");
 gchar *s = N_("Load the calculator state from file.");
 gchar *s = N_("Load state image...");
 gchar *s = N_("Save the calculator state into a file (called state image).");
 gchar *s = N_("Save state image...");
-gchar *s = N_("Reload the previously saved state.");
-gchar *s = N_("Revert to saved state");
+gchar *s = N_("Do a 'save state image' and exits.");
+gchar *s = N_("E_xit and save state");
 gchar *s = N_("Go into the debugger.");
 gchar *s = N_("Enter _debugger...");
 gchar *s = N_("Reset the calculator.");
@@ -76,7 +78,5 @@ gchar *s = N_("ChangeLog");
 gchar *s = N_("About TiEmu...");
 gchar *s = N_("About...");
 gchar *s = N_("Infos...");
-gchar *s = N_("Do a 'save state image' and exits.");
-gchar *s = N_("E_xit and save state");
 gchar *s = N_("Just exits.");
 gchar *s = N_("Exit _without saving state");
