@@ -103,6 +103,10 @@ except for branches. <br>
 &nbsp;&nbsp;&nbsp; This works for JSR/BSR/FLINE/DBCC/TRAP, <br>
 - <span style="font-style: italic;">run to cursor</span> : runs PC
 until cursor address is reached.<br>
+<br>
+Miscelaneous shortcuts:<br>
+- F6 : (internal use) copy source code window content to C:\disasm.txt<br>
+- F1 : set selection and PC to next line<br>
 <h2>7.2 Registers</h2>
 <table style="width: 100%; text-align: left;" border="0" cellpadding="2"
  cellspacing="2">
